--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Read on Literature and Music</h2>
-										<p>Three minute reads that : "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
-										<a href="#" class="special">Learn more</a>
+										<p>Three minute reads that will make you think: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
 									</div>
 								</div>
 							</section>
