--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								/html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
