--- a/index.html
+++ b/index.html
@@ -21,23 +21,6 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Solid State</a></h1>
 						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-						</div>
-					</nav>
 
 				<!-- Banner -->
 					<section id="banner">
@@ -57,6 +40,7 @@
 									<div class="content">
 										<h2 class="major">Read on Literature and Music</h2>
 										<p>Three minute reads that will make you think: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
+										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -66,7 +50,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
+										<h2 class="major">Listen to the </h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
