--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
 						<h1><a href="index.html">Solid State</a></h1>
 						<nav>
 
+				<!-- Menu -->
+					<nav id="menu">
+						<div class="inner">
+							<h2>Menu</h2>
+							<ul class="links">
+								<li><a href="index.html">Home</a></li>
+								<li><a href="generic.html">Generic</a></li>
+								<li><a href="elements.html">Elements</a></li>
+								<li><a href="#">Log In</a></li>
+								<li><a href="#">Sign Up</a></li>
+							</ul>
+						</div>
+					</nav>
+
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
