--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Solid State</a></h1>
 						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
+					</header>
 
 				<!-- Menu -->
 					<nav id="menu">
