--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">Listen to the Soundtrack of Our Lives</h2>
+										<p>Mumble rap, '80s bands and controversies within the industry--join the conversation as six college students talk about the influential role of music.</p>
+										<a href="#" class="special">[Learn more](https://soundcloud.com/user-409180876/the-soundtrack-of-our-lives)</a>
 									</div>
 								</div>
 							</section>
