--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									<div class="content">
 										<h2 class="major">Listen to the Soundtrack of Our Lives</h2>
 										<p>Mumble rap, '80s bands and controversies within the industry--join the conversation as six college students talk about the influential role of music.</p>
-										<a href="#" class="special">[Learn more](https://soundcloud.com/user-409180876/the-soundtrack-of-our-lives)</a>
+										[Listen Here](https://soundcloud.com/user-409180876/the-soundtrack-of-our-lives)</a>
 									</div>
 								</div>
 							</section>
