--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Read on Literature and Music</h2>
-										<p>Three minute reads that will make you think: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
+										<h2 class="major">Read on Literature or Music</h2>
+										<p>Three minute reads to facilitate thought: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
 									</div>
 								</div>
 							</section>
@@ -68,7 +68,7 @@
 									<div class="content">
 										<h2 class="major">Listen to the Soundtrack of Our Lives</h2>
 										<p>Mumble rap, '80s bands and controversies within the industry--join the conversation as six college students talk about the influential role of music.</p>
-										[Listen Here](https://soundcloud.com/user-409180876/the-soundtrack-of-our-lives)</a>
+										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -79,7 +79,7 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Watch the Battle of the Streaming Servies</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>Tidal, Spotify, Apple Music or Soundcloud?.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -181,32 +181,17 @@
 <!-- Footer -->
 	<section id="footer">
 		<div class="inner">
-			<h2 class="major">Get in touch</h2>
-			<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-			<form method="post" action="#">
 				<div class="fields">
 					<div class="field">
 						<label for="name">Name</label>
 						<input type="text" name="name" id="name" />
-					</div>
-					<div class="field">
-						<label for="email">Email</label>
-						<input type="email" name="email" id="email" />
-					</div>
-					<div class="field">
-						<label for="message">Message</label>
-						<textarea name="message" id="message" rows="4"></textarea>
 					</div>
 				</div>
 				<ul class="actions">
 					<li><input type="submit" value="Send Message" /></li>
 				</ul>
 			</form>
-			<ul class="contact">
-				<li class="fa-home">
-					Untitled Inc<br />
-					1234 Somewhere Road Suite #2894<br />
-					Nashville, TN 00000-0000
+
 				</li>
 				<li class="fa-phone">(000) 000-0000</li>
 				<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
