--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Read on Literature or Music</h2>
-										<p>Three minute reads to facilitate thought: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
+										<p>Three minute reads to facilitate thought and inspire: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
 									</div>
 								</div>
 							</section>
@@ -71,7 +71,7 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Watch the Battle of the Streaming Servies</h2>
-										<p>Tidal, Spotify, Apple Music or Soundcloud?.</p>
+										<p>Tidal, Spotify, Apple Music and Soundcloud. Considering price, content, artists and additional benefits--who will win? </p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
