--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 									<div class="content">
 										<h2 class="major">Read on Literature or Music</h2>
 										<p>Three minute reads to facilitate thought and inspire: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
+										<a href="#" class="special">Read Here</a>
 									</div>
 								</div>
 							</section>
@@ -60,7 +61,7 @@
 									<div class="content">
 										<h2 class="major">Listen to the Soundtrack of Our Lives</h2>
 										<p>Mumble rap, '80s bands and controversies within the industry--join the conversation as six college students talk about the influential role of music.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="#" class="special">Listen Here</a>
 									</div>
 								</div>
 							</section>
@@ -72,7 +73,7 @@
 									<div class="content">
 										<h2 class="major">Watch the Battle of the Streaming Servies</h2>
 										<p>Tidal, Spotify, Apple Music and Soundcloud. Considering price, content, artists and additional benefits--who will win? </p>
-										<a href="#" class="special">Learn more</a>
+										<a href="#" class="special">Watch Here</a>
 									</div>
 								</div>
 							</section>
