--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Watch the Battle of the Streaming Servies</h2>
+										<h2 class="major">Watch the Battle of the Streaming Services</h2>
 										<p>Tidal, Spotify, Apple Music and Soundcloud. Considering price, content, artists and additional benefits--who will win? </p>
 										<a href="#" class="special">Watch Here</a>
 									</div>
@@ -81,7 +81,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Further Reading</h2>
+									<h2 class="major">Related Content</h2>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
