--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/book.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Read on Literature or Music</h2>
 										<p>Three minute reads to facilitate thought and inspire: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
