--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
+											<h3 class="major">"The Evolution of Mumble Rap [2011 - 2018]"</h3>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
+											<h3 class="major">"The Best Books of 2019 (So Far)"</h3>
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
