--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									<div class="content">
 										<h2 class="major">Read on Literature or Music</h2>
 										<p>Three minute reads to facilitate thought and inspire: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
-										<a href="#" class="special">Read Here</a>
+										<a href="https://medium.com/me/stories/public" class="special">Read Here</a>
 									</div>
 								</div>
 							</section>
