--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									<div class="content">
 										<h2 class="major">Listen to the Soundtrack of Our Lives</h2>
 										<p>Mumble rap, '80s bands and controversies within the industry--join the conversation as six college students talk about the influential role of music.</p>
-										<a href="#" class="special">Listen Here</a>
+										<a href="https://soundcloud.com/user-409180876/the-soundtrack-of-our-lives" class="special">Listen Here</a>
 									</div>
 								</div>
 							</section>
@@ -86,12 +86,12 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">"The Evolution of Mumble Rap [2011 - 2018]"</h3>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://www.youtube.com/watch?v=VuRSOnrwPQA" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">"The Best Books of 2019 (So Far)"</h3>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://www.esquire.com/entertainment/books/g25446583/best-books-of-2019/" class="special">Learn more</a>
 										</article>
 									</section>
 									<ul class="actions">
