--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<div class="content">
 										<h2 class="major">Watch the Battle of the Streaming Services</h2>
 										<p>Tidal, Spotify, Apple Music and Soundcloud. Considering price, content, artists and additional benefits--who will win? </p>
-										<a href="#" class="special">Watch Here</a>
+										<a href="https://www.youtube.com/watch?v=kqJY2yPhh08&feature=youtu.be" class="special">Watch Here</a>
 									</div>
 								</div>
 							</section>
