--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">"The Evolution of Mumble Rap [2011 - 2018]"</h3>
-											<a href="https://www.youtube.com/watch?v=VuRSOnrwPQA" class="special">Learn more</a>
+											<a href="https://www.youtube.com/watch?v=VuRSOnrwPQA" class="special">Watch Video Here</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">"The Best Books of 2019 (So Far)"</h3>
-											<a href="https://www.esquire.com/entertainment/books/g25446583/best-books-of-2019/" class="special">Learn more</a>
+											<a href="https://www.esquire.com/entertainment/books/g25446583/best-books-of-2019/" class="special">Read Article Here</a>
 										</article>
 									</section>
 									<ul class="actions">
