--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/recordedit.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Listen to the Soundtrack of Our Lives</h2>
 										<p>Mumble rap, '80s bands and controversies within the industry--join the conversation as six college students talk about the influential role of music.</p>
@@ -69,7 +69,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="iphoneedit.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Watch the Battle of the Streaming Services</h2>
 										<p>Tidal, Spotify, Apple Music and Soundcloud. Considering price, content, artists and additional benefits--who will win? </p>
