--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="iphoneedit.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/iphoneedit.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Watch the Battle of the Streaming Services</h2>
 										<p>Tidal, Spotify, Apple Music and Soundcloud. Considering price, content, artists and additional benefits--who will win? </p>
