--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<a href="#" class="image"><img src="images/editbooks.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Read on Literature or Music</h2>
-										<p>Three minute reads to facilitate thought and inspire: "Three ways understand the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
+										<p>Three minute reads to inspire and facilitate thought: "Three ways understanding the arts can make you a better person," "Your trends are pissing off Baby Boomers" and "If you like '80s music, listen to these contemporary bands."</p>
 										<a href="https://medium.com/me/stories/public" class="special">Read Here</a>
 									</div>
 								</div>
